# b-tree-list

./: .gitignore  CMakeLists.txt  README.md
lib/: _allocator.hpp  _block_rw.hpp  _data_info.hpp  _file_saving_manager.hpp  _node.hpp  allocator.hpp  b_tree_list.hpp  block_rw.hpp  data_info.hpp  file_saving_manager.hpp  node.hpp
stress_tests/: extract_stress.cpp  insert_stress.cpp  main.cpp  set_stress.cpp
stress_tests/analysis/: extracts_test_10.txt  extracts_test_10000.txt  extracts_test_10000000.txt  inserts_test_10.txt  inserts_test_1000.txt  inserts_test_10000.txt  inserts_test_100000.txt  inserts_test_1000000.txt  inserts_test_10000000.txt  sets_test_100000.txt  sets_test_10000000.txt
stress_tests/analysis/after_adding_memcpy/: extracts_test_10.txt  extracts_test_100.txt  extracts_test_1000.txt  extracts_test_10000.txt  extracts_test_100000.txt  extracts_test_1000000.txt  extracts_test_10000000.txt  extracts_test_100000000.txt  inserts_test_10.txt  inserts_test_100.txt  inserts_test_1000.txt  inserts_test_10000.txt  inserts_test_100000.txt  inserts_test_1000000.txt  inserts_test_10000000.txt  inserts_test_100000000.txt  sets_test_10.txt  sets_test_100.txt  sets_test_1000.txt  sets_test_10000.txt  sets_test_100000.txt  sets_test_1000000.txt  sets_test_10000000.txt  sets_test_100000000.txt  speed-analysis.ipynb
stress_tests/analysis/after_adding_memcpy/.ipynb_checkpoints/: speed-analysis-checkpoint.ipynb
stress_tests/analysis/before_adding_memcpy/: extracts_test_100.txt  extracts_test_100000.txt  extracts_test_1000000.txt  inserts_test_100.txt  sets_test_1000.txt  sets_test_1000000.txt
stress_tests/try1/: inserts_test_100.txt  inserts_test_1000.txt  inserts_test_10000.txt  inserts_test_100000.txt  inserts_test_1000000.txt  inserts_test_10000000.txt  inserts_test_100000000.txt
stress_tests/try2/: inserts_test_100.txt  inserts_test_1000.txt  inserts_test_10000.txt  inserts_test_100000.txt  inserts_test_1000000.txt  inserts_test_10000000.txt  inserts_test_100000000.txt
stress_tests/try3/: extracts_test_1000.txt  sets_test_10.txt  sets_test_100.txt  sets_test_10000.txt  speed-analysis.ipynb
tests/: main.cpp  tests.cpp
